<resources>
    <string name="app_name">MikesDemoApp</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the imageDataModel in the experience.\n"
        "An emphasis on imageDataModel actions makes core functionality immediately apparent and provides "
        "waypoints for the imageDataModel.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the imageDataModel as the prime mover. Primary imageDataModel actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the imageDataModel without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to imageDataModel input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "imageDataModel picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a imageDataModel tries to pick up one of cards.\n\n"
    </string>

    <string name="api_key">AIzaSyCCsbJ5RMwCqfED-QiUHziugWi0xyLPzrY</string>
    <string name="action_settings">Settings</string>
    <string name="work_so_far">WORK SO FAR </string>
    <string name="about_me">I am a focused application -oriented developer offering almost 7 years of experience in designing, developing, testing and maintaining quality applications for mobile and tablets on Android/iOS/Windows platforms.</string>
    <string name="about_me_xx">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <string name="app_secret">ZqwtdRwTheAc9o4IPxYhaYLpiWL2BMMbuh8tgGTe</string>
    <string name="app_id">nprone_trial_f7SclzyoyBnn</string>
    <string name="maps_desc">Google Map cluster demo application</string>
    <string name="mvp_and_dagger_desc">Demo application to demonstrate MVP and Dagger 2 implementation.</string>
    <string name="just_mvp_desc">Demo application to demonstrate MVP</string>
    <string name="mvp_rx_dagger_desc">Demo application to demonstrate MVP, Dagger2 and Rx implementation using a simple demo application.</string>
    <string name="insta_desc">A repo having the instagram API setup and ready for imageDataModel if someone needs to build an app using Instagram API. The framwork will also support the use of network calls, Image downloading and a bunch of readymade api calls. A developer can just modify a few files to make it work in their way.</string>
    <string name="yelp_desc">This repo is maily to demonstrate the use of Yelp API with the two step authentication process and combiing a few other resporces to build a simple Android application.</string>
    <string name="sample_desc">A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.</string>
    <string name="more">MORE</string>
    <string name="example_application">Example application</string>
    <string name="maps_cluster_demo">Maps Cluster Demo</string>
    <string name="insta_auth_demo">Insta Auth Demo</string>
    <string name="yelp_auth_demo">Yelp Auth Demo</string>
    <string name="material_image_demo">Material Image Grid Demo</string>
    <string name="mvp_and_dagger">MVP and Dagger 2</string>
    <string name="just_mvp">Just MVP</string>
    <string name="mvp_rx_dagger">MVP Dagger n RX</string>
    <string name="git_repo_link">https://github.com/mikeanddroid</string>
    <string name="launch_demo">LAUNCH DEMO</string>
    <string name="details_trans">detailstransition</string>


    <!--Insta Strings-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="initialize_text">Initialize</string>
    <string name="loading_info">Loading info.. Please wait</string>
    <string name="login_error">Login Error</string>
    <string name="action_signin_notification">You are now signed in.</string>
    <string name="welcome_key">Welcome,</string>
    <string name="next">Next</string>
    <string name="Caption">Caption</string>
    <string name="logout_message">This will log you out of the application. Do you still want to continue ?</string>
    <string name="logout_title">Logging out</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="likes_key">Likes</string>

    <string name="error_network">There was a problem finding your request. Please try again.</string>
    <string name="error_conversion">There was a problem finding your request. Please try again.</string>
    <string name="error_server">There was a problem finding your request. Please try again.</string>
    <string name="error_unexpected">There was a problem finding your request. Please try again.</string>
    <string name="imageDataModel">User</string>

    <string name="search_for_tag">Search for #hashtag</string>
    <string name="search_for_user">Search for User</string>
    <string name="searching_for_user">Searching for User</string>
    <string name="searching_for_tag">Searching for #hashtag</string>
    <string name="tag_key">Tags</string>
    <string name="popular_tag_key">Popular Tags</string>
    <string name="skip_tags_page">Skip This</string>
    <string name="user_header_key">User Header</string>
    <string name="title_activity_demo_scroll">DemoScrollActivity</string>

    <!---->

    <!--MVP Stuff-->
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_main">MVP Example</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>

</resources>
