<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standard_view_padding"
    android:layout_marginEnd="@dimen/standard_view_padding"
    android:layout_marginStart="@dimen/standard_view_padding"
    android:layout_marginTop="@dimen/medium_view_padding"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_view_padding"
        android:layout_marginEnd="@dimen/standard_view_padding"
        android:layout_marginStart="@dimen/standard_view_padding"
        android:layout_marginTop="@dimen/standard_view_padding"
        android:focusable="true"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="12dp">

        <LinearLayout
            android:id="@+id/details_list_item_container"
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:background="@color/location_title"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="6dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_drawable_custom"
                android:orientation="horizontal"
                android:padding="6dip">

                <ImageView
                    android:id="@+id/git_repo_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="TODO"
                    android:src="@mipmap/github"
                    android:transitionName="repoimage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dip">

                    <TextView
                        android:id="@+id/git_repo_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:text="@string/example_application"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="16sp"
                        android:transitionName="reponame" />

                    <TextView
                        android:id="@+id/git_repo_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:padding="2dp"
                        android:text="@string/insta_desc"
                        android:textColor="@color/green_4"
                        android:textSize="12sp"
                        android:transitionName="repodesc" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/standard_2x_view_margin_top"
                        android:clickable="true"
                        android:focusable="true">

                        <Button
                            android:id="@+id/git_desc_more"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/action_button_size"
                            android:layout_gravity="center|end"
                            android:background="@drawable/more_ripple_bg"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="@string/more"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            android:transitionName="repomore" />

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
