<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/git_item_details_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/git_item_details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/location_title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:id="@+id/git_item_details_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/location_title"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="6dip"
                android:transitionName="@string/details_trans">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_drawable_custom"
                    android:orientation="horizontal"
                    android:padding="6dip">

                    <ImageView
                        android:id="@+id/git_item_details_git_repo_icon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="6dp"
                        android:contentDescription="TODO"
                        android:src="@mipmap/github"
                        android:transitionName="repoimage" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:orientation="vertical"
                        android:padding="6dip">

                        <TextView
                            android:id="@+id/git_item_details_git_repo_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="2dp"
                            android:text="@string/example_application"
                            android:textColor="@color/cardview_light_background"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:transitionName="reponame" />

                        <TextView
                            android:id="@+id/git_item_details_git_repo_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/standard_view_padding"
                            android:clickable="true"
                            android:gravity="center_vertical"
                            android:padding="2dp"
                            android:text="@string/git_repo_link"
                            android:textColor="@color/light_blue4"
                            android:textSize="16sp"
                            android:textStyle="italic" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!---->
        </RelativeLayout>
    </RelativeLayout>

    <include layout="@layout/content_details" />

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/location_title"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<LinearLayout-->
    <!--android:id="@+id/userHolder"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/transparent_grey_light2"-->
    <!--android:elevation="8dp"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:id="@+id/userFirstName"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:text="Welcome"-->
    <!--android:textSize="36sp" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:background="@color/transparent_grey_light"-->
    <!--android:elevation="8dp"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<ImageView-->
    <!--android:id="@+id/profileImage"-->
    <!--android:layout_width="150dp"-->
    <!--android:layout_height="150dp"-->
    <!--android:layout_margin="8dp"-->
    <!--android:padding="8dp" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:background="@color/grey_11"-->
    <!--android:elevation="8dp"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="8dp">-->

    <!--<TextView-->
    <!--android:id="@+id/userBio"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:padding="8dp"-->
    <!--android:textColor="@color/brown_2"-->
    <!--android:textSize="24sp"-->
    <!--android:textStyle="bold" />-->

    <!--<TextView-->
    <!--android:id="@+id/userHeadline"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:padding="8dp"-->
    <!--android:textColor="@color/brown_2"-->
    <!--android:textSize="24sp"-->
    <!--android:textStyle="bold" />-->

    <!--</LinearLayout>-->

    <!--</LinearLayout>-->

    <!--<RelativeLayout-->
    <!--android:id="@+id/nextHolder"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/transparent_grey_light">-->

    <!--<Button-->
    <!--android:id="@+id/next"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_gravity="center"-->
    <!--android:background="@drawable/ripple_drawable_custom"-->
    <!--android:text="NEXT"-->
    <!--android:textColor="#f3f3f3"-->
    <!--android:transitionName="NEXT" />-->

    <!--</RelativeLayout>-->

</LinearLayout>